java-rest-service/.tanzu/config/httproute-java-rest-service.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  annotations:
    apps.tanzu.vmware.com/promotable: ""
    apps.tanzu.vmware.com/promote-group: ContainerApp/java-rest-service
  name: java-rest-service-http-route
spec:
  parentRefs:
  - group: networking.tanzu.vmware.com
    kind: Entrypoint
    name: java-rest-service
  rules:
  - backendRefs:
    - kind: Service
      name: java-rest-service
      port: 8080
